사용자 생성및 instance에 사용자 할당
