# works-api/worksInit.go
@@ -3,8 +3,8 @@ package main
 import (
 	"database/sql"
 	"encoding/json"
-	"fmt"
 	_ "github.com/go-sql-driver/mysql"
+	"github.com/sirupsen/logrus"
 	"os"
 	"time"
 )
@@ -27,33 +27,37 @@ func DBSetting() {
 
 func MoldSetting() {
 	db, err := sql.Open(os.Getenv("MysqlType"), os.Getenv("DbInfo"))
-	log.Debug("||||||||||||||||||||||||||||||")
-	log.Debug(os.Getenv("MysqlType"))
-	log.Debug(os.Getenv("DbInfo"))
 	if err != nil {
-		fmt.Println("DB connect error")
-		fmt.Println(err)
+		log.WithFields(logrus.Fields{
+			"worksInit": "MoldSetting",
+		}).Errorf("DB connect error[%v]", err)
 	}
 	defer db.Close()
-	fmt.Println("DB connect success")
+	log.WithFields(logrus.Fields{
+		"worksInit": "MoldSetting",
+	}).Infof("DB connect success")
 
 	rows, err := db.Query("SELECT * FROM configuration WHERE name LIKE 'mold.default%'")
 	if err != nil {
-		fmt.Println("worksInit Mold Setting Query Failed")
-		fmt.Println(err.Error())
+		log.WithFields(logrus.Fields{
+			"worksInit": "MoldSetting",
+		}).Errorf("worksInit Mold Setting Query Failed [%v]", err)
 	}
 	defer rows.Close()
 
 	result, err := rowsToString(rows)
 	if err != nil {
-		fmt.Println(err)
+		log.WithFields(logrus.Fields{
+			"worksInit": "MoldSetting",
+		}).Errorf("Row to String conversion error [%v]", err)
 	}
 
 	jsonUnmarshal := []Configuration{}
 	err = json.Unmarshal([]byte(result), &jsonUnmarshal)
 	if err != nil {
-		fmt.Println("err")
-		fmt.Println(err)
+		log.WithFields(logrus.Fields{
+			"worksInit": "MoldSetting",
+		}).Errorf("String to JSON conversion error [%v]", err)
 	}
 
 	moldValue := map[string]interface{}{}
@@ -71,8 +75,9 @@ func MoldSetting() {
 	postfix := moldValue["mold.default.url.postfix"].(string)
 	apiKey := moldValue["mold.default.api.key"].(string)
 	secretKey := moldValue["mold.default.secret.key"].(string)
-	fmt.Println(moldValue)
-	fmt.Println("Set Mold URL = " + protocol + url + port + postfix)
+	log.WithFields(logrus.Fields{
+		"worksInit": "MoldSetting",
+	}).Infof("Set Mold URL [%v%v%v%v]", protocol, url, port, postfix)
 	os.Setenv("MoldUrl", protocol+url+port+postfix)
 	os.Setenv("MoldApiKey", apiKey)
 	os.Setenv("MoldSecretKey", secretKey)
@@ -81,36 +86,43 @@ func MoldSetting() {
 func DCSetting() {
 	db, err := sql.Open(os.Getenv("MysqlType"), os.Getenv("DbInfo"))
 	if err != nil {
-		fmt.Println("DB connect error")
-		fmt.Println(err)
+		log.WithFields(logrus.Fields{
+			"worksInit": "DCSetting",
+		}).Errorf("DB connect error[%v]", err)
 	}
 	defer db.Close()
-	fmt.Println("DB connect success")
+	log.WithFields(logrus.Fields{
+		"worksInit": "DCSetting",
+	}).Infof("DB connect success")
 
 	rows, err := db.Query("SELECT * FROM configuration WHERE name LIKE 'dc.default%'")
 	if err != nil {
-		fmt.Println("worksInit Mold Setting Query Failed")
-		fmt.Println(err.Error())
+		log.WithFields(logrus.Fields{
+			"worksInit": "DCSetting",
+		}).Errorf("worksInit DC Setting Query Failed [%v]", err)
 	}
 	defer rows.Close()
 
 	result, err := rowsToString(rows)
 	if err != nil {
-		fmt.Println(err)
+		log.WithFields(logrus.Fields{
+			"worksInit": "DCSetting",
+		}).Errorf("Row to String conversion error [%v]", err)
 	}
 
 	jsonUnmarshal := []Configuration{}
 	err = json.Unmarshal([]byte(result), &jsonUnmarshal)
 	if err != nil {
-		fmt.Println("err")
-		fmt.Println(err)
+		log.WithFields(logrus.Fields{
+			"worksInit": "DCSetting",
+		}).Errorf("String to JSON conversion error [%v]", err)
 	}
 
 	dcValue := map[string]interface{}{}
 	for _, v := range jsonUnmarshal {
 		dcValue[v.Name] = v.Value
 	}
-	fmt.Println(dcValue)
+
 	protocol := dcValue["dc.default.protocol"].(string)
 	url := dcValue["dc.default.url"].(string)
 	port := dcValue["dc.default.port"].(string)
@@ -120,7 +132,163 @@ func DCSetting() {
 		port = ":" + port
 	}
 	postfix := dcValue["dc.default.url.postfix"].(string)
-
-	fmt.Println("Set Domain Controller URL = " + protocol + url + port + postfix)
+	log.WithFields(logrus.Fields{
+		"worksInit": "DCSetting",
+	}).Infof("Set Domain Controller URL [%v%v%v%v]", protocol, url, port, postfix)
 	os.Setenv("DCUrl", protocol+url+port+postfix)
+	os.Setenv("DCIp", url)
+	os.Setenv("DCPort", port)
+}
+
+func WorksSetting() {
+	db, err := sql.Open(os.Getenv("MysqlType"), os.Getenv("DbInfo"))
+	if err != nil {
+		log.WithFields(logrus.Fields{
+			"worksInit": "WorksSetting",
+		}).Errorf("DB connect error[%v]", err)
+	}
+	defer db.Close()
+	log.WithFields(logrus.Fields{
+		"worksInit": "WorksSetting",
+	}).Infof("DB connect success")
+
+	rows, err := db.Query("SELECT * FROM configuration WHERE name LIKE 'works.default%'")
+	if err != nil {
+		log.WithFields(logrus.Fields{
+			"worksInit": "WorksSetting",
+		}).Errorf("worksInit Works Setting Query Failed[%v]", err)
+	}
+	defer rows.Close()
+
+	result, err := rowsToString(rows)
+	if err != nil {
+		log.WithFields(logrus.Fields{
+			"worksInit": "WorksSetting",
+		}).Errorf("Row to String conversion error [%v]", err)
+	}
+
+	jsonUnmarshal := []Configuration{}
+	err = json.Unmarshal([]byte(result), &jsonUnmarshal)
+	if err != nil {
+		log.WithFields(logrus.Fields{
+			"worksInit": "WorksSetting",
+		}).Errorf("String to JSON conversion error [%v]", err)
+	}
+
+	worksValue := map[string]interface{}{}
+	for _, v := range jsonUnmarshal {
+		worksValue[v.Name] = v.Value
+	}
+	url := worksValue["works.default.url"].(string)
+	port := worksValue["works.default.port"].(string)
+
+	log.WithFields(logrus.Fields{
+		"worksInit": "WorksSetting",
+	}).Infof("Works URL [%v][%v]", url, port)
+	os.Setenv("WorksUrl", url+port)
+	os.Setenv("WorksIp", url)
+	os.Setenv("WorksPort", port)
+}
+
+func SambaSetting() {
+	db, err := sql.Open(os.Getenv("MysqlType"), os.Getenv("DbInfo"))
+	if err != nil {
+		log.WithFields(logrus.Fields{
+			"worksInit": "SambaSetting",
+		}).Errorf("DB connect error[%v]", err)
+	}
+	defer db.Close()
+	log.WithFields(logrus.Fields{
+		"worksInit": "SambaSetting",
+	}).Infof("DB connect success")
+
+	rows, err := db.Query("SELECT * FROM configuration WHERE name LIKE 'samba.default%'")
+	if err != nil {
+		log.WithFields(logrus.Fields{
+			"worksInit": "SambaSetting",
+		}).Errorf("worksInit Samba Setting Query Failed[%v]", err)
+	}
+	defer rows.Close()
+
+	result, err := rowsToString(rows)
+	if err != nil {
+		log.WithFields(logrus.Fields{
+			"worksInit": "SambaSetting",
+		}).Errorf("Row to String conversion error [%v]", err)
+	}
+
+	jsonUnmarshal := []Configuration{}
+	err = json.Unmarshal([]byte(result), &jsonUnmarshal)
+	if err != nil {
+		log.WithFields(logrus.Fields{
+			"worksInit": "SambaSetting",
+		}).Errorf("String to JSON conversion error [%v]", err)
+	}
+
+	sambaValue := map[string]interface{}{}
+	for _, v := range jsonUnmarshal {
+		sambaValue[v.Name] = v.Value
+	}
+	url := sambaValue["samba.default.url"].(string)
+	domain := sambaValue["samba.default.domain"].(string)
+
+	log.WithFields(logrus.Fields{
+		"worksInit": "WorksSetting",
+	}).Infof("Works URL [%v] SAMBA Domain [%v]", url, domain)
+	os.Setenv("SambaUrl", url)
+	os.Setenv("SambaDomain", domain)
+}
+
+func GuacamoleSetting() {
+	db, err := sql.Open(os.Getenv("MysqlType"), os.Getenv("DbInfo"))
+	if err != nil {
+		log.WithFields(logrus.Fields{
+			"worksInit": "GuacamoleSetting",
+		}).Errorf("DB connect error[%v]", err)
+	}
+	defer db.Close()
+	log.WithFields(logrus.Fields{
+		"worksInit": "GuacamoleSetting",
+	}).Infof("DB connect success")
+
+	rows, err := db.Query("SELECT * FROM configuration WHERE name LIKE 'guacamole.default%'")
+	if err != nil {
+		log.WithFields(logrus.Fields{
+			"worksInit": "GuacamoleSetting",
+		}).Errorf("worksInit Guacamole Setting Query Failed[%v]", err)
+	}
+	defer rows.Close()
+
+	result, err := rowsToString(rows)
+	if err != nil {
+		log.WithFields(logrus.Fields{
+			"worksInit": "GuacamoleSetting",
+		}).Errorf("Row to String conversion error [%v]", err)
+	}
+
+	jsonUnmarshal := []Configuration{}
+	err = json.Unmarshal([]byte(result), &jsonUnmarshal)
+	if err != nil {
+		log.WithFields(logrus.Fields{
+			"worksInit": "GuacamoleSetting",
+		}).Errorf("String to JSON conversion error [%v]", err)
+	}
+
+	guacamoleValue := map[string]interface{}{}
+	for _, v := range jsonUnmarshal {
+		guacamoleValue[v.Name] = v.Value
+	}
+	protocol := guacamoleValue["guacamole.default.protocol"].(string)
+	url := guacamoleValue["guacamole.default.url"].(string)
+	port := guacamoleValue["guacamole.default.port"].(string)
+	postfix := guacamoleValue["guacamole.default.url.postfix"].(string)
+	username := guacamoleValue["guacamole.default.username"].(string)
+
+	log.WithFields(logrus.Fields{
+		"worksInit": "WorksSetting",
+	}).Infof("guacamole porotocol [%v], guacamole url [%v], guacamole port [%v], guacamole postfix [%v], guacamole username [%v]", protocol, url, port, postfix, username)
+	os.Setenv("GuacamoleUrl", protocol+url+":"+port)
+	os.Setenv("GuacamoleIp", url)
+	os.Setenv("GuacamolePort", port)
+	os.Setenv("GuacamoleUsername", username)
 }
